# rust-ag-blog

./: Cargo.toml  README.md
posts/: chi_siamo.md  example1.md  example2.md  la_montagna_360.md  la_montagna_sottosopra.md
site/: index.html
site/blog/: blog.html
site/blog/index.php/: blog.html
site/css/: elementor-css-post-1448.css
site/post/: chi_siamo.html  la_montagna_360.html  la_montagna_sottosopra.html
site/post/css/: elementor-css-post-1862.css
site/post/index.php/: ipsum.html  lorem.html  post.html  prova.html
site/posts/css/: elementor-css-post-1448.css
site/posts/index.php/: index.html
src/: add.rs  generate.rs  main.rs  open.rs  remove.rs
templates/: blog.html  blog_entry.html  md_post.md  post.html
templates/blog/index.php/: index.html
templates/post/index.php/: index.html
templates/posts/css/: elementor-css-post-1711.css
