[package]
name = "rust-AG-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui_extras = { version = "0.25.0", features = ["image"] }
lazy_static = "1.4.0"
markdown = "0.3.0"
rfd = "0.12.1"
serde = "1.0.195"
serde_json = "1.0.108"
tera = "1.19.1"
yaml-rust = "0.4.5"
